updated index page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -149,7 +149,10 @@
         class="text-blue-400 underline hover:text-blue-300 transition"
         >technical blogs</a
       >, building and contributing to open-source security tools, and regularly
-      participating in CTFs to sharpen my skills.
+      participating in CTFs to sharpen my skills. Always open to learning, collaborating on projects, or tackling fun security challenges.
+    </p>
+    <p class="mb-4 text-zinc-300">
+      Let's stay in touch :)
     </p>
 
     <div class="featured-links">
