--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,38 +1,47 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode }}">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | {{ .Site.Title }}{{ end }}</title>
-    <meta name="description" content="{{ if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.Description }}{{ end }}">
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      {{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | {{ .Site.Title
+      }}{{ end }}
+    </title>
+    <meta
+      name="description"
+      content="{{ if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.Description }}{{ end }}"
+    />
+
     <!-- Load CSS -->
-    {{ $css := resources.Get "css/main.css" | resources.ExecuteAsTemplate "css/main.css" . | fingerprint }}
-    <link rel="stylesheet" href="{{ $css.RelPermalink }}">
-    
+    {{ $css := resources.Get "css/main.css" | resources.ExecuteAsTemplate
+    "css/main.css" . | fingerprint }}
+    <link rel="stylesheet" href="{{ $css.RelPermalink }}" />
+
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/images/favicon.png">
-    
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
+
     <!-- Initial theme class based on user preference -->
     <script>
-        // Set the initial theme class on the html element
-        const savedTheme = localStorage.getItem('theme');
-        if (savedTheme) {
-            document.documentElement.classList.add(savedTheme);
-        } else if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
-            document.documentElement.classList.add('dark');
-        } else {
-            document.documentElement.classList.add('light');
-        }
+      // Set the initial theme class on the html element
+      const savedTheme = localStorage.getItem("theme");
+      if (savedTheme) {
+        document.documentElement.classList.add(savedTheme);
+      } else if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+        document.documentElement.classList.add("dark");
+      } else {
+        document.documentElement.classList.add("light");
+      }
     </script>
-</head>
-<body>
+    <script type="module">
+      import { inject } from "https://analytics.vercel.app/script.js";
+      inject();
+    </script>
+  </head>
+  <body>
     {{ partial "header.html" . }}
-    
-    <div class="content-wrapper">
-        {{ block "main" . }}{{ end }}
-    </div>
-    
+
+    <div class="content-wrapper">{{ block "main" . }}{{ end }}</div>
+
     {{ partial "footer.html" . }}
-</body>
+  </body>
 </html>
