--- a/layouts/index.html
+++ b/layouts/index.html
@@ -166,6 +166,7 @@
       </a>
       <a href="/contact" class="featured-link border border-blue-500 text-blue-500 px-4 py-2 rounded-md hover:bg-blue-500 hover:text-white transition">
         Get in Touch
+        refined
       </a>
     </div> -->
   </section>
