--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -9,6 +9,7 @@
       <a href="/about" class="nav-link {{ if eq .RelPermalink "/about/" }}active{{ end }}">About</a>
       <a href="/projects" class="nav-link {{ if eq .RelPermalink "/projects/" }}active{{ end }}">Projects</a>
       <a href="/blog" class="nav-link {{ if eq .RelPermalink "/blog/" }}active{{ end }}">Blog</a>
+      <a href="/ctf" class="nav-link {{ if eq .RelPermalink "/ctf/" }}active{{ end }}">CTFs</a>
       <!-- <a href="/archives" class="nav-link {{ if eq .RelPermalink "/archives/" }}active{{ end }}">Archives</a> -->
       <a href="/contact" class="nav-link {{ if eq .RelPermalink "/contact/" }}active{{ end }}">Contact</a>
       <a href="https://calendly.com/bavarvasneh/30min" class="nav-link" target="_blank">Calendly</a>
