--- a/layouts/index.html
+++ b/layouts/index.html
@@ -205,17 +205,16 @@
       <div class="project-card">
         <h3>
           <a href="/projects" role="link">
-            Eye-Sint Tool
+            Obsidian sync from windows
           </a>
         </h3>
         <p>
-          It's a GUI-based unique OSINT tool hosted on Cloud which can do web
-          enum and human footprinting.
+          PowerShell-based automation sets up your Obsidian vault to sync with a private GitHub repo
         </p>
         <div class="tags">
-          <span class="tag">Python</span>
-          <span class="tag">React</span>
-          <span class="tag">Flask</span>
+          <span class="tag">Powershell</span>
+          <span class="tag">Automation</span>
+          <span class="tag">Obsidian</span>
         </div>
         <div class="project-links">
           <a href="/projects">Learn More</a>
