--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -10,7 +10,7 @@
     <meta
       name="title"
       property="og:title"
-      content="Sneh Bavarva | Cybersecurity Portfolio – OSCP, DevSecOps, and Security Researcher"
+      content="Sneh Bavarva | Cybersecurity Professional"
     />
     <meta
       name="description"
