--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <main class="main">
-  <div class="list-page">
+  <div class="list-page markdown-content">
     <h1>{{ .Title }}</h1>
     <div class="description">{{ .Content }}</div>
 
