--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -2,7 +2,7 @@
 <main class="blog-container">
   <h1 class="blog-title">📝 My Blogs</h1>
   <p class="blog-description">
-    These are mynew blogs apart from Medium blogs. For my previous Medium blogs
+    These are my new blogs apart from Medium blogs. For my previous Medium blogs
     about Privilege Escalation Techniques and more,
     <a
       class="timeline-content-read"
@@ -13,6 +13,22 @@
       Please visit here →
     </a>
   </p>
+
+  <div class="newsletter-promo">
+    <p class="blog-description">
+      I've started a personal newsletter and it's really very precious to me.
+      I'll be sharing insights, my experiences, and stories from my
+      cybersecurity journey - no spam, no bots, just real value! It takes only
+      <span class="span-for-inline">10 minutes/week</span>, and I'll make sure
+      every issue adds some value in your life :&#41;
+    </p>
+
+    <div class="subscribe-container">
+      <a href="/newsletter" class="subscribe-button">
+        📬 Subscribe to My Newsletter
+      </a>
+    </div>
+  </div>
 
   <div class="timeline-wrapper">
     <div class="timeline-line"></div>
