--- a/layouts/index.html
+++ b/layouts/index.html
@@ -207,6 +207,7 @@
     <div class="featured-links">
       <a href="/projects" class="featured-link outline">View Projects →</a>
       <a href="/contact" class="featured-link outline">Get in Touch →</a>
+      <a href="/newsletter" class="featured-link outline">Subscribe to Newsletter →</a>
     </div>
 
     <!-- <div class="featured-links flex flex-col sm:flex-row gap-4">
