--- a/layouts/shortcodes/timeline.html
+++ b/layouts/shortcodes/timeline.html
@@ -63,6 +63,26 @@
 
 </style>
 
+
+
+  <hr style="border: none; border-top: 2px solid #444; margin: 2rem 0;" />
+
+<div class="newsletter-promo">
+    <p>
+      I have started my own Newsletter and it's really very precious to me. It
+      won't be used for any spam and it will be bot-free. It will take only
+      <span class="span-for-inline">10 minutes/week</span>, and trust me, I will
+      make sure that it will add some value in your life :&#41;
+    </p>
+
+    <div class="subscribe-container">
+      <a href="/newsletter" class="subscribe-button">
+        📬 Subscribe to My Newsletter
+      </a>
+    </div>
+  </div>
+
+
 <hr style="border: none; border-top: 2px solid #444; margin: 2rem 0;" />
 
 <h2>🎓 Education </h2>
