--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -26,7 +26,7 @@
     </script>
     {{ end }}
 
-    <div class="content">{{ .Content }}</div>
+    <div class="content markdown-content">{{ .Content }}</div>
   </article>
   
 
