--- a/assets/css/extended/blog.css
+++ b/assets/css/extended/blog.css
@@ -137,9 +137,23 @@ figure.align-center img {
   display: inline-block;
 }
 
-
 /* Scrollable code blocks */
 div.highlight pre {
   overflow-x: auto;
   white-space: pre;
 }
+
+strong {
+  color: #3273dc; /* dark yellow (Solarized theme color) */
+  font-weight: bold;
+}
+
+
+p > strong:only-child {
+  display: inline;
+}
+
+p:has(> strong:only-child) {
+  margin-bottom: 0 !important;
+}
+
