CVE section update

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -405,6 +405,8 @@
   </section>
 
   <hr style="border: none; border-top: 2px solid #444; margin: 2rem 0" />
+  
+  <!-- CVE Section should be added -->
 
   <div style="margin-top: 3rem">{{ partial "medium-feed.html" . }}</div>
 
