--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,6 +12,7 @@
       <a href="/ctf" class="nav-link {{ if eq .RelPermalink "/ctf/" }}active{{ end }}">CTFs</a>
       <!-- <a href="/archives" class="nav-link {{ if eq .RelPermalink "/archives/" }}active{{ end }}">Archives</a> -->
       <a href="/contact" class="nav-link {{ if eq .RelPermalink "/contact/" }}active{{ end }}">Contact</a>
+      <a href="https://topmate.io/snehbavarva" class="nav-link" target="_blank">Topmate</a>
       <a href="https://calendly.com/bavarvasneh/30min" class="nav-link" target="_blank">Calendly</a>
       <a href="https://linkedin.com/in/snehbavarva" class="nav-link" target="_blank">LinkedIn</a>
     </nav>
