--- a/layouts/index.html
+++ b/layouts/index.html
@@ -304,7 +304,7 @@
               Unifiedtransform v2.X suffers from Broken Access Control, allowing
               students/teachers to access
               <code class="inline-code">/students/edit/{id}</code> and modify
-              student records. Affects all v2.X builds
+              student records. Affects all v2.0 builds
             </li>
           </ul>
         </div>
@@ -324,7 +324,7 @@
               Unifiedtransform v2.X suffers from Broken Access Control, allowing
               students/teachers to access
               <code class="inline-code">/course/edit/{id}</code> and modify
-              course data. Affects all v2.X builds
+              course data. Affects all v2.0 builds
             </li>
           </ul>
         </div>
