--- a/layouts/index.html
+++ b/layouts/index.html
@@ -301,7 +301,7 @@
           </p>
           <ul class="list-disc list-inside text-sm text-zinc-300 ml-4">
             <li>
-              Unifiedtransform v2.X suffers from Broken Access Control, allowing
+              Unifiedtransform v2.0 suffers from Broken Access Control, allowing
               students/teachers to access
               <code class="inline-code">/students/edit/{id}</code> and modify
               student records. Affects all v2.0 builds
@@ -321,7 +321,7 @@
           </p>
           <ul class="list-disc list-inside text-sm text-zinc-300 ml-4">
             <li>
-              Unifiedtransform v2.X suffers from Broken Access Control, allowing
+              Unifiedtransform v2.0 suffers from Broken Access Control, allowing
               students/teachers to access
               <code class="inline-code">/course/edit/{id}</code> and modify
               course data. Affects all v2.0 builds
