--- a/layouts/index.html
+++ b/layouts/index.html
@@ -294,7 +294,7 @@
           <p class="text-white mb-1">
             <span class="text-red-400">|</span>
             <b
-              ><a href="" class="text-red-400 hover:underline" target="_blank"
+              ><a href="https://www.cve.org/CVERecord?id=CVE-2025-46203" class="text-red-400 hover:underline" target="_blank"
                 >CVE-2025-46203</a
               ></b
             >
@@ -314,7 +314,7 @@
           <p class="text-white mb-1">
             <span class="text-red-400">|</span>
             <b
-              ><a href="" class="text-red-400 hover:underline" target="_blank"
+              ><a href="https://www.cve.org/CVERecord?id=CVE-2025-46204" class="text-red-400 hover:underline" target="_blank"
                 >CVE-2025-46204</a
               >
             </b>
