--- a/layouts/partials/htb-thm.html
+++ b/layouts/partials/htb-thm.html
@@ -180,19 +180,19 @@
   </a>
 
   <!-- Grid 3 -->
-  <a href="/ctf/htb/challenges" class="cert-card">
+  <!-- <a href="/ctf/htb/challenges" class="cert-card">
     <img src="/images/ctf/htb/challenges.jpg" alt="HTB Challenges" />
     <div class="cert-name">HTB Challenges</div>
-  </a>
+  </a> -->
 
   <!-- Spacer to balance grid -->
   <div></div>
 
   <!-- Grid 4 -->
-  <a href="/ctf/htb/fortress" class="cert-card">
+  <!-- <a href="/ctf/htb/fortress" class="cert-card">
     <img src="/images/ctf/htb/fortress.jpg" alt="HTB Fortress" />
     <div class="cert-name">HTB Fortress</div>
-  </a>
+  </a> -->
 </div>
 
 </section>
